--- a/src/css/login.css
+++ b/src/css/login.css
@@ -7,6 +7,9 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     background-color: #f9f9f9;
+
+
+    box-shadow: 0px 0px 30px gray;
   }
   
   .register-form h2, .login-form h2 {
@@ -45,3 +48,6 @@ justify-content: center;
 align-items: center;
 height: 80vh;
   }
+
+
+  
